Make canvas use retina support.

--- a/src/viewer/viewer.html
+++ b/src/viewer/viewer.html
@@ -15,7 +15,8 @@
     font-family: Consolas, Lucida Grande, sans-serif;
   }
   canvas {
-    background-image: url('background.png');
+    // background-image: url('background.png');
+    background-color: white;
     border: 4px solid #2c2c2c;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -32,7 +33,7 @@
   </tr>
   <tr>
     <td>
-      <canvas id="Canvas" width="1024" height="256"></canvas>
+      <canvas id="Canvas" width="512" height="800"></canvas>
     </td>
   </tr>
   <tr>
