--- a/src/viewer/viewer.html
+++ b/src/viewer/viewer.html
@@ -4,8 +4,8 @@
   <title></title>
 </head>
 <body style="background-color: #2c2c2c">
-<script src="../../lib/tessellate/_tessellate.js"></script>
-<script src="../../lib/tessellate/tessellate.js"></script>
+<script src="../../lib/tess/_tessellate.js"></script>
+<script src="../../lib/tess/tessellate.js"></script>
 <script src="../util.js"></script>
 <script src="../gl.js"></script>
 <script src="../canvas.js"></script>
