--- a/src/viewer/viewer.html
+++ b/src/viewer/viewer.html
@@ -6,6 +6,7 @@
 <body style="background-color: #2c2c2c">
 <script src="../../lib/tess/_tessellate.js"></script>
 <script src="../../lib/tess/tessellate.js"></script>
+<script src="../geo.js"></script>
 <script src="../util.js"></script>
 <script src="../gl.js"></script>
 <script src="../canvas.js"></script>
@@ -15,7 +16,7 @@
     font-family: Consolas, Lucida Grande, sans-serif;
   }
   canvas {
-    // background-image: url('background.png');
+    # background-image: url('background.png');
     background-color: white;
     border: 4px solid #2c2c2c;
     -webkit-border-radius: 10px;
@@ -33,7 +34,7 @@
   </tr>
   <tr>
     <td>
-      <canvas id="Canvas" width="512" height="800"></canvas>
+      <canvas id="Canvas" width="512" height="512"></canvas>
     </td>
   </tr>
   <tr>
@@ -44,7 +45,7 @@
   </tr>
   <tr>
     <td>
-      <canvas id="Canvas.WebGL" width="1024" height="256"></canvas>
+      <canvas id="Canvas.WebGL" width="512" height="512"></canvas>
     </td>
   </tr>
 </table>
